--- a/DevCard_MVC/Views/Shared/_Layout.cshtml
+++ b/DevCard_MVC/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="fa">
 
 <head>
-    <title>DevCard از موسسه آتریا</title>
+    <title>DevCard از فناوران نپتون</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,7 +23,7 @@
     <header class="header text-center">
         <div class="force-overflow">
             <h1 class="blog-name pt-lg-4 mb-0">
-                <a href="index.html">حسین عباس آبادی</a>
+                <a href="index.html">فرهاد حسین زاده</a>
             </h1>
 
             <nav class="navbar navbar-expand-lg navbar-dark">
@@ -35,10 +35,10 @@
 
                 <div id="navigation" class="collapse navbar-collapse flex-column">
                     <div class="profile-section pt-3 pt-lg-0">
-                        <img class="profile-image mb-3 rounded-circle mx-auto" src="~/assets/images/me.jpeg" alt="image">
+                        <img class="profile-image mb-3 rounded-circle mx-auto" src="~/assets/images/photo_2023-06-09_19-30-45.jpg" alt="image">
 
                         <div class="bio mb-3">
-                            سلام، حسین عباس آبادی هستم از موسسه آموزشی آتریا. به وبسایت شخصی من خوش
+                            سلام، فرهاد حسین زاده هستم از شرکت فناوران نپتون. به وبسایت شخصی من خوش
                             آمدید.
                         </div>
                         <ul class="social-list list-inline py-2 mx-auto">
@@ -94,8 +94,7 @@
             <small class="copyright">
                 تولید شده توسط &copy;
                 <a href="http://www.atriya.com" target="_blank">
-                    موسسه آموزشی
-                    آتریا
+                    فناوران نپتون
                 </a>
             </small>
         </footer>
