--- a/DevCard_MVC/Views/Shared/_Layout.cshtml
+++ b/DevCard_MVC/Views/Shared/_Layout.cshtml
@@ -32,6 +32,12 @@
     <script src="~/assets/plugins/jquery-3.4.1.min.js"></script>
     <script src="~/assets/plugins/popper.min.js"></script>
     <script src="~/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+
+    @*validation jquery scripts (unobtrusive) *@
+        <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+        <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+        @*<script typr="text/javascript" src="@Url.Action("Index", "Test")"></script>*@
 </body>
 
 </html>
